--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <main>
         <h2>Esta es mi página personal</h2>
-        <p>Hola esta es mi página :p</p>
+        <p>Hola esta es mi página</p>
     </main>
     <footer> 
         © Elvira Nieva 2024  Todos los derechos reservados.
