--- a/contacto.html
+++ b/contacto.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacto</title>
     <link rel="stylesheet" href="style.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
     <nav class="barra">
@@ -114,7 +115,13 @@
 </table>
 
     <footer> 
-        Elvira Nieva <br> 
+        <nav>
+            <ul>
+                <li><a href="contacto.html">Inicio de la página</a>
+                <a href="#"><i class='bx bxs-up-arrow-circle'></i></a></li>
+            </ul>
+        </nav>
+        © Elvira Nieva <br> 
         Email: elviranieva8@gmail.com <br>
         Dirección del CURZA: Monseñor Esandi y Ayacucho, 8500 - Viedma, Río Negro, Argentina
     </footer>
