--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inicio</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Gravitas+One&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    
+
 </head>
 <body>  
     <nav class="barra">
@@ -16,7 +22,9 @@
     </nav>
 
     <header>
+         <div class="header-content">
         <h1>Elvira Nieva</h1>
+        <img src="https://web.curza.uncoma.edu.ar/images/logo_blanco.png" alt="Logo Curza" class="logo" width="100">
     </header>
 
     <main>
@@ -24,7 +32,14 @@
         <p>Hola esta es mi página</p>
     </main>
     <footer> 
-        © Elvira Nieva 2024  Todos los derechos reservados.
+        <nav>
+        <ul>
+            <li><a href="index.html">Inicio de la página</a>
+            <a href="#"><i class='bx bxs-up-arrow-circle'></i></a></li>
+        </ul>
+    </nav>
+        ©Elvira Nieva <br> 
+        Email: elviranieva8@gmail.com <br>
         Dirección del CURZA: Monseñor Esandi y Ayacucho, 8500 - Viedma, Río Negro, Argentina
     </footer>
 </body>
