--- a/acercade.html
+++ b/acercade.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Acerca de</title>
     <link rel="stylesheet" href="style.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     
 </head>
 <body> 
@@ -22,15 +23,24 @@
 
     <main>
         <h2>Introducción</h2>
-        <p>Soy Elvira, estudiante de la carrera de Desarrollo web en el CURZA. Estoy recursando esta materia.</p>
+        <article class="acercade">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis doloribus voluptatum odit officia, accusamus ipsam magnam vel debitis, error voluptates quas. Autem, praesentium? Facere, enim! Quasi nobis eum reprehenderit aliquam!.</p>
         <figure class="foto">
                 <img src="https://cdn.vdmnoticias.com/uploads/images/2023/03/d66169d4-1ad2-5553-bac0-e6a48b9bbeac_mid.jpg" alt="Exterior del Curza" width="500">
                 <figcaption>Exterior del CURZA</figcaption> 
         </figure>
+    </article>
     </main>
 
     <footer> 
-        © Elvira Nieva 2024  Todos los derechos reservados.
+        <nav>
+            <ul>
+                <li><a href="acercade.html">Inicio de la página</a>
+                <a href="#"><i class='bx bxs-up-arrow-circle'></i></a></li>
+            </ul>
+        </nav>
+        ©Elvira Nieva <br> 
+        Email: elviranieva8@gmail.com <br>
         Dirección del CURZA: Monseñor Esandi y Ayacucho, 8500 - Viedma, Río Negro, Argentina
     </footer>
 </body>
