--- a/acercade.html
+++ b/acercade.html
@@ -22,15 +22,16 @@
     </header>
 
     <main>
-        <h2>Introducción</h2>
+        <h2>Curriculum Vitae</h2>
         <article class="acercade">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis doloribus voluptatum odit officia, accusamus ipsam magnam vel debitis, error voluptates quas. Autem, praesentium? Facere, enim! Quasi nobis eum reprehenderit aliquam!.</p>
-        <figure class="foto">
-                <img src="https://cdn.vdmnoticias.com/uploads/images/2023/03/d66169d4-1ad2-5553-bac0-e6a48b9bbeac_mid.jpg" alt="Exterior del Curza" width="500">
-                <figcaption>Exterior del CURZA</figcaption> 
-        </figure>
-    </article>
+            <p id="resumen">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis doloribus...</p>
+            <p id="contenido-completo" style="display: none;">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum voluptates et molestias magnam quisquam, deserunt nisi pariatur mollitia est voluptas! Nostrum consectetur architecto excepturi debitis iste doloremque facilis nesciunt nam vel repudiandae reiciendis molestias repellat itaque est, neque voluptatibus blanditiis cupiditate fugit odio perspiciatis fuga iusto veniam reprehenderit voluptate. Consectetur hic quasi odio nulla voluptate, nostrum qui, sapiente unde cum repudiandae nesciunt! Dicta distinctio aliquam et maxime eaque, provident eius nisi nesciunt omnis laboriosam labore, quis, temporibus in adipisci ea perferendis sequi iure numquam debitis tempore repellat deleniti quisquam odit commodi. Assumenda similique molestias esse quisquam voluptate dolorum eaque deserunt, aut itaque alias sequi rem possimus nemo nesciunt illum consectetur sit perspiciatis accusamus aliquid id magni laudantium? Odit cupiditate debitis, consequatur deleniti iure blanditiis laborum corrupti quasi non quibusdam doloribus fuga quisquam, consequuntur cum distinctio facere? Molestias aspernatur magni non libero molestiae, dignissimos, voluptatem laudantium consequuntur ducimus, mollitia enim suscipit!
+            </p>
+            <button id="boton-leer-mas" class="leermas">Leer más</button>
+        </article>
     </main>
+    
 
     <footer> 
         <nav>
@@ -43,6 +44,7 @@
         Email: elviranieva8@gmail.com <br>
         Dirección del CURZA: Monseñor Esandi y Ayacucho, 8500 - Viedma, Río Negro, Argentina
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
 
