--- a/contacto.html
+++ b/contacto.html
@@ -93,26 +93,26 @@
         </form>
     </main>
     <h2>Datos del formulario:</h2>
-<table>
-    <thead>
-        <tr>
-            <th>Campo</th>
-            <th>Valor</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr><td>Nombre</td><td></td></tr>
-        <tr><td>Apellido</td><td></td></tr>
-        <tr><td>Email</td><td></td></tr>
-        <tr><td>Teléfono</td><td></td></tr>
-        <tr><td>Edad</td><td></td></tr>
-        <tr><td>Dirección</td><td></td></tr>
-        <tr><td>Provincia</td><td></td></tr>
-        <tr><td>Código Postal</td><td></td></tr>
-        <tr><td>Método de contacto</td><td></td></tr>
-        <tr><td>Suscripción</td><td></td></tr>
-    </tbody>
-</table>
+    <table id="form-table">
+        <thead>
+            <tr>
+                <th>Campo</th>
+                <th>Valor</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr><td>Nombre</td><td id="nombre-value"></td></tr>
+            <tr><td>Apellido</td><td id="apellido-value"></td></tr>
+            <tr><td>Email</td><td id="email-value"></td></tr>
+            <tr><td>Teléfono</td><td id="tel-value"></td></tr>
+            <tr><td>Edad</td><td id="edad-value"></td></tr>
+            <tr><td>Dirección</td><td id="dir-value"></td></tr>
+            <tr><td>Provincia</td><td id="prov-value"></td></tr>
+            <tr><td>Código Postal</td><td id="cod-value"></td></tr>
+            <tr><td>Método de contacto</td><td id="contacto-value"></td></tr>
+            <tr><td>Suscripción</td><td id="sus-value"></td></tr>
+        </tbody>
+    </table>
 
     <footer> 
         <nav>
@@ -125,6 +125,7 @@
         Email: elviranieva8@gmail.com <br>
         Dirección del CURZA: Monseñor Esandi y Ayacucho, 8500 - Viedma, Río Negro, Argentina
     </footer>
-    
+    <script src="script.js"></script>
+
 </body>
 </html>
