--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
             <li><a href="index.html">Inicio</a></li> 
             <li><a href="acercade.html">Acerca de</a></li>
             <li><a href="contacto.html">Contacto</a></li>
+            <li><a href="juego.html">Juego</a></li>
+
         </ul>
     </nav>
 
